Self_Paced_Exercices/Traffic_Management/Configuring_Ingress_and_Egress_Traffic/Subsets_nginx_apache_http_headers/answer/Destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: helloworld-dr
spec:
  host: helloworld.default.svc.cluster.local
  subsets:
    - name: nginx
      labels:
        backend: nginx
    - name: apache
      labels:
        backend: apache
